progs/cpp/c5612ab2-39c0-45e6-a185-5b249bbca64b/err.txt
progs/cpp/c5612ab2-39c0-45e6-a185-5b249bbca64b/prog.cpp:5:14: warning: missing terminating " character [enabled by default]
      cout << ";
              ^
progs/cpp/c5612ab2-39c0-45e6-a185-5b249bbca64b/prog.cpp:5:6: error: missing terminating " character
      cout << ";
      ^
progs/cpp/c5612ab2-39c0-45e6-a185-5b249bbca64b/prog.cpp: In function ‘int main()’:
progs/cpp/c5612ab2-39c0-45e6-a185-5b249bbca64b/prog.cpp:6:6: error: expected primary-expression before ‘return’
      return 0;
      ^
progs/cpp/c5612ab2-39c0-45e6-a185-5b249bbca64b/prog.cpp:6:6: error: expected ‘;’ before ‘return’
